style.css
:root{
    --primary: #E08709;
    --secondary: green;
    --background: #F5F5F5;
}

html{
    font-size: 62.5%; /*converts default font size of 16px -> 10px for rem*/
}

*{
    padding: 0;
    margin: 0;
}
body{
    font-family: arial;
}

a{
    text-decoration: none;
    color: white;
}

img{
    max-width: 100%;
}

h2, h3{
    font-size: 2.3rem;
}

/* utilities */
.flex-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0 auto;
    height: 10rem;
}

.flex-header-v{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 35vh;
}

.flex-about p{
    font-size: 1.5rem;
}
.container{
    max-width: 55%;
    margin: 0 auto;
}

@media(max-width: 768px){
    .flex-header{
        flex-direction: column;
    }
    .flex-header-v{
        height: 20vh;
        text-align: center;
    }
}

/* header */
.site-init{
    background-image: url(img/header.jpg);
    height: 40vh;
    background-size: cover;
    color: white;
    padding-top: 3rem;
}

.site-second{
    background-color: #222222;
    color: white;
}

.menu a{
    margin-right: 2rem;
}

.flex-header a{
    font-size: 1.5rem;
}

.flex-header h1{
    font-family:'Times New Roman', Times, serif;
    font-size: 4rem;
}

.flex-header-v p{
    font-size: 2.5rem;
    font-weight: 600;
    padding-top: 2rem;
}

@media(max-width: 768px){
    .site-init{
        height: 30vh;
    }
}
/* about us */
.flex-about{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
}

@media(max-width: 768px){
    .flex-about{
        flex-direction: column;
        margin-bottom: 3rem;
    }
    .flex-about div{
        display: flex;
        flex-direction: column;
    }

    .flex-about img{
        max-width: 30%;
    }

    .container h2{
        text-align: center;
        margin-bottom: 1rem;
        font-size: 3rem;
    }
}
/* house item */
.house-card-flex{
    display: flex;
    gap: 1.5rem;
    margin-bottom: 5rem;
}
.house-item{
    background-color: var(--background);
    width: 45rem;
    border: 1px solid lightgrey;
    height: 100%;
}

.house-item-text{
    padding: 2rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.price{
    color: var(--secondary);
}

.icon-flex{
    display: flex;
    justify-content: space-around;
}

.icon-flex li{
    display: flex;
}

.icon-flex img, p{
    margin-right: 2rem;
}

.house-details-btn{
    background-color: var(--primary);
    border: none;
    color: white;
    display: block;
    margin-top: 2rem;
    padding: 1rem;
    text-align: center;
    font-size: 2rem;
}

.houses p{
    font-size: 1.5rem;
}

@media(max-width: 768px){
    .house-card-flex{
        flex-direction: column;
    }
}

/* Contact form */
.form-container{
    display: block;
}

fieldset{
    padding: 1rem;
}

legend, label, input{
    font-size: 1.6rem;
}

label{
    font-weight: 600;
}

.input-container{
    margin: 1rem;
}

.input-container input,
.input-container textarea{
    width: 98%;
    background-color: #dedede;
    border: none;
    padding: .5rem;
    border-radius: 1rem;
}

.select-container{
    width: 97.5%;
    background-color: #dedede;
    border: none;
    padding: .5rem;
    margin-left: 1rem;
    margin-top: 1rem;
    border-radius: 1rem;
}

.input-container label{
    display: block;
}

.input-container-inline{
    margin-left: 1.3rem;
}

fieldset p{
    margin-left: 1.3rem;
    font-size: 1.3rem;
    margin-top: 1rem;
}

.input-container-inline label,
.input-container-inline input{
    margin-right: 5rem;
}

.contact-title h2{
    text-align: center;
    font-size: 3rem;
}

.contact-title p{
    text-align: center;
    font-size: 2rem;
}

.contact-button{
    display: inline-block;
    background-color: var(--secondary);
    padding: 1rem;
    margin-top: 2rem;
    font-size: 2rem;
}

.type-title{
    margin-left: 10px;
    margin-bottom: -10px;
}

/* blog */
.blog-flex{
    display: flex;
}

.blog-main{
    flex: 2;
}

.blog-header{
    border-bottom: 1px solid black;
    border-right: 1px solid black;
    font-size: 4rem;
    font-weight: 800;
    padding: 5rem 0;
}

.blog-post{
    display: flex;
    justify-content: center;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    padding: 3rem 0 3rem 3rem;
    gap: 3rem;
}

.blog-img{
    flex: 1;
}

.blog-preview{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex: 1;
}

.blog-preview p{
    font-size: 1.5rem;
}
.blog-author{
    display: flex;
    align-items: center;
    gap: 2rem;
}

.blog-author img{
    border-radius: 10rem;
    max-height: 75%;
}

.sidebar{
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 5rem;
}

.search-bar a{
    color: lightgrey;
    border: 1px solid grey;
    padding: 1rem 7rem 1rem 1rem;
    border-radius: 5rem;
    font-size: 1.5rem;
    display: block;
}

.search-bar h2{
    font-weight: 800;
    margin: 3rem 0;
}

.sidebar-blog-flex{
    display: flex;
    flex-direction: column;
}
.sidebar-blog-post{
    display: flex;
    height: 10rem;
    border-bottom: 1px solid grey;
    padding: 2rem;
    gap: 1rem;
}

.sidebar-blog-post img{
    flex: 1;
    object-fit: cover;
    width: 10rem;
    height: 10rem;
    
}
.sidebar-blog-post h3{
    font-size: 2rem;
    flex: 4;
}

.socials-flex{
    display: flex;
    gap: 2rem;
}

.socials-flex a{
    color: initial;
    border: 1px solid grey;
    width: 2rem;
    height: 2rem;
    border-radius: 10rem;
    padding: 2rem;
    justify-content: center;
    align-items: center;
    display: flex;
}

.socials-flex i{
    font-size: 3rem;
}

/* about */
.about-main h1{
    text-align: center;
    font-size: 5rem;
    font-weight: 800;
    margin: 3rem 0;
}
.about-flex{
    display: flex;
    justify-content: center;
    gap: 2rem;
}

.employee-card{
    border: 1px solid grey;
    display: flex;
    flex-direction: column;
    background-color: var(--background);
    flex: 1;
}

.employee-card img{
    object-fit: cover;
    width: 100%;
    height: 40vh;
}

.about-card-bottom{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 2rem;
    padding: 2rem;
    flex: 1;
}

.about-card-name{
    font-size: 3rem;
}

.about-card-title{
    color: grey;
    font-weight: 100;
}

.about-card-description{
    font-size: 2rem;
}

.about-card-email{
    font-size: 2rem;
}

.about-card-bottom a{
    display: block;
    text-align: center;
}

